# segway-base

./: README.md
base/: Dockerfile
base/etc/syslog-ng/: syslog-ng.conf
base/etc/syslog-ng/conf.d/common/destinations/: d_logscale.conf
base/etc/syslog-ng/conf.d/common/logpaths/: internal_stdout.conf
microsoft/: Dockerfile
microsoft/azure/etc/syslog-ng/conf.d/plugin/microsoft/: plugin.conf
microsoft/azure/etc/syslog-ng/conf.d/plugin/microsoft/azure/: plugin.conf
microsoft/azure/etc/syslog-ng/conf.d/plugin/microsoft/azure/sources/: eventhub.conf  microsoft_azure_source_eventhub.py
microsoft/azure/python/: pyproject.toml  source_plugin.py
