[tool.poetry]
name = "microsoft-azure-plugin"
version = "0.1.0"
description = ""
authors = ["Ryan Faircloth <ryan@dss-i.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
azure-eventhub = "^5.11.2"
azure-eventhub-checkpointstoreblob-aio = "^1.1.4"
azure-identity = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
